--- a/src/style.css
+++ b/src/style.css
@@ -36,5 +36,17 @@ body {
 }
 
 #app {
-  margin: 12px;
+  padding: 12px;
+}
+
+@media (max-width: 800px) {
+  #app {
+    width: 338px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 0 auto;
+  }
 }
